--- a/HelloP5JS/HelloP5JS.html
+++ b/HelloP5JS/HelloP5JS.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <script src="p5.js"></script>
-  <script src="p5.sound.js"></script>
+  <script src="../lib/p5.js"></script>
+  <script src="../lib/p5.sound.js"></script>
   <script src="sketch.js"></script>
 </head>
 <body>
