--- a/HelloP5JS/HelloP5JS.html
+++ b/HelloP5JS/HelloP5JS.html
@@ -1,9 +1,22 @@
 <!doctype html>
 <html>
 <head>
-  <script src="../lib/p5.js"></script>
-  <script src="../lib/p5.sound.js"></script>
-  <script src="sketch.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+
+  <script type="text/javascript">
+    function setup()
+    {
+      // put setup code here
+      createCanvas( windowWidth, windowHeight );
+    }
+
+    function draw()
+    {
+      // put drawing code here
+      background( 255, 255, 0 );
+    }
+
+  </script>
 </head>
 <body>
 </body>
